# KG-Library

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  entrypoint2.sh  pyproject.toml
kg_library/: AppFacade.py  __init__.py  config.py  db.py  main.py
kg_library/analogs/: analogs.txt  rebel.csv  rebel.py
kg_library/common/: BaseInformationExtractor.py  EdgeData.py  Exporter.py  GraphData.py  GraphJSON.py  NodeData.py  __init__.py  dataset.py
kg_library/models/: __init__.py
kg_library/models/embedding_training/: DataLoader.py  EmbeddingPreprocessor.py  GraphNN.py
kg_library/models/entity_extraction/: KnowledgeExtractor.py  TripletExtractor.py  rebel.py
kg_library/models/evaluation/: TripletEvaluator.py
kg_library/models/training/: CompGCNConv.py  DataLoader.py  EarlyStoppingController.py  EmbeddingPreprocessor.py  GraphNN.py  GraphTrainer.py
kg_library/tests/: embeddig_test.py  embedding_prepare_test.py  embedding_test.py  gnn_test.py  graph_test.py
kg_library/utils/: AudioProcessor.py  PackageManager.py  Preprocessing.py  VideoProcessor.py  __init__.py  preprocessing.py  test_graph.py
