[project]
name = "KG-library"
version = "0.1.0"
description = ""
authors = [
    {name = "bleeeana",email = "bobkov.v03@icloud.com"}
]
readme = "README.md"
requires-python = "~=3.11"
packages = [
    {include = "kg_library"}
]
dependencies = [
    "neo4j (==5.28.1)",
    "py2neo (==2021.2.4)",
    "transformers (==4.49.0)",
    "nltk (==3.9.1)",
    "scipy (==1.15.2)",
    "pandas (==2.2.3)",
    "seaborn (==0.13.2)",
    "scikit-learn (==1.6.1)",
    "torch-geometric (==2.6.1)",
    "torch (==2.6.0)",
    "langchain",
    "langchain-community",
    "wikipedia",
    "dgl (==2.1.0)",
    "sentence-transformers",
    "spacy"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"