[project]
name = "KG-library"
version = "0.1.0"
description = ""
authors = [
    {name = "bleeeana", email = "bobkov.v03@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"  # Ограничение для совместимости с coreferee
packages = [
    {include = "kg_library"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
neo4j = "==5.28.1"
py2neo = "==2021.2.4"
transformers = "==4.30.2"
nltk = "==3.9.1"
scipy = ">=1.15.2"
pandas = "==2.2.3"
seaborn = "==0.13.2"
scikit-learn = "==1.6.1"
torch-geometric = "==2.6.1"
torch = "==2.6.0"
langchain = "0.2.9"
langchain-community = "==0.2.10"
spacy = "==3.5.4"
coreferee = "==1.4.1"
datasets = "==2.18.0"
pysbd = "*"

[tool.poetry.dev-dependencies]
