[project]
name = "KG-library"
version = "0.1.0"
description = ""
authors = [
    {name = "bleeeana", email = "bobkov.v03@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"  # Ограничение для совместимости с coreferee
packages = [
    {include = "kg_library"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
neo4j = "==5.28.1"
transformers = "^4.31.0"
spacy-transformers = "^1.2.5"
nltk = "==3.9.1"
scipy = ">=1.15.2"
pandas = "==2.2.3"
seaborn = "==0.13.2"
scikit-learn = "==1.6.1"
torch-geometric = "^2.6.1"
torch = "^2.1.0"
langchain = "^0.2.11"
langchain-community = "^0.2.11"
spacy = "^3.5.4"
coreferee = "^1.4.1"
pysbd = "*"
python-dotenv = "^1.0.0"
bs4 = "^0.0.2"
sparqlwrapper = "^2.0.0"
sentence-transformers = "^2.2.0"
datasets = "^3.5.0"
stanza = "^1.10.1"
pyopenie = "0.2.0"
openai-whisper = "^20240930"

[tool.poetry.dev-dependencies]
